syntax = "proto3";
package lastmile.driver;
import "google/protobuf/timestamp.proto";
import "common.proto";

service DriverService {
  rpc RegisterDriver(RegisterDriverRequest) returns (DriverInfo);
  rpc RegisterRoute(RegisterRouteRequest) returns (RouteResponse);
  rpc UpdatePickupStatus(UpdatePickupRequest) returns (Ack);
  rpc GetDriver(DriverId) returns (DriverInfo);
}

message RegisterDriverRequest {
  string user_id = 1;
  string vehicle_no = 2;
  int32 capacity = 3; // seats
}

message DriverInfo {
  string driver_id = 1;
  string user_id = 2;
  string vehicle_no = 3;
  int32 capacity = 4;
  repeated Route routes = 5;
}

message Route {
  string route_id = 1;
  string destination = 2; // e.g. "Koramangala"
  repeated string station_ids = 3; // stations near route
}

message RegisterRouteRequest {
  string driver_id = 1;
  Route route = 2;
}

message UpdatePickupRequest {
  string driver_id = 1;
  string route_id = 2;
  bool picking_up = 3;
}

message Ack { bool ok = 1; string msg = 2; }
message DriverId { string id = 1; }
